@@ -1,0 +1,14 @@
+package com.blockhead7360.mc.wedbars.player;
+
+public enum Statistic {
+	
+	WINS,
+	LOSSES,
+	KILLS,
+	DEATHS,
+	FKILLS,
+	FDEATHS,
+	BKILLS,
+	BDEATHS
+	
+}
